--- a/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
@@ -115,7 +115,7 @@ Further details, including how to apply to use the system, can be found <a href=
                    the first time you access MONSooN it is much easier.
                 </p>
                 <ul>
-                <li><strong>First time access</strong>
+                <li><strong>First time you access MONSooN</strong>
                     <br/>
                     In a terminal:
 <pre>
